--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -31,8 +31,12 @@
             </form>
     
             <div class="text-end">
+
               <button type="button" class="btn btn-outline-light me-2">Login</button>
+              <a href="{% url 'registration' %}">
               <button type="button" class="btn btn-warning">Sign-up</button>
+              </a>
+
             </div>
           </div>
         </div>
