--- a/movies/templates/movie_list.html
+++ b/movies/templates/movie_list.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
+
+
 {% block content %}
+
+
 {% for i in movies %}
-
-    
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5" style="padding: 100px;">
+        <h1 class="display-5 fw-bold">{{i.name}}</h1>
+        <div style="display: flex;">
         <img src="{{i.image.url}}" alt="{{i.name}}" style="width: 500px;">
-      <h1 class="display-5 fw-bold">{{i.name}}</h1>
-      <p class="col-md-8 fs-4">{{i.description}}</p>
-      <div style="display: flex;">
+      
+      <p class="col-md-8 fs-4" style="width: 500px; margin-left: 20px;">{{i.description|slice:":500"}}...</p>
+    </div >
+      <div style="display: flex; margin-top: 20px;">
         <button class="btn btn-primary btn-lg" type="button">Подробнее</button>
-        <p style="margin-left: 400px;"> {{i.realised_date}}</p>
+<p style="margin-left: 400px"> {{i.realised_date}}</p>
         </div>
-      </div>
     </div>
-
+  </div>
 {% endfor %}
+
 {% endblock %}
