--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -20,7 +20,7 @@
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">Category</a></li>
+              <li><a href="category.html" class="nav-link px-2 text-white">Category</a></li>
               <li><a href="#" class="nav-link px-2 text-white">Movies</a></li>
               
               <li><a href="#" class="nav-link px-2 text-white">About</a></li>
@@ -60,7 +60,7 @@
           <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
         </footer>
       </div>
-      <body id="bg" style="background-color: rgb(93, 61, 209);">
+      
         
 </body>
 </html>
