--- a/movies/templates/registration.html
+++ b/movies/templates/registration.html
@@ -3,11 +3,40 @@
 
 {% block content %}
 
-<br>
-<script src="https://cdn.tailwindcss.com"></script>
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit" class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
-</form>
+
+<form>
+    <div style="width: 400px; margin-left: 650px; margin-top: 150px;">
+     <h1 class="h3 mb-3 fw-normal">Please sign Up</h1>
+    
+
+    <div class="form-floating ">
+      <input type="username" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <label for="floatingInput">Username</label>
+    </div>
+    <div class="form-floating">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+      </div>
+    <div class="form-floating">
+      <input type="password1" class="form-control" id="floatingPassword" placeholder="Password">
+      <label for="floatingPassword">Password1</label>
+    </div>
+    <div class="form-floating">
+        <input type="password2" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password2</label>
+      </div>
+
+
+    <div class="form-check text-start my-3">
+      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+        Remember me
+      </label>
+    </div>
+    <a href="{% url 'login' %}">
+      <button class="btn btn-primary w-100 py-2 text-bg-dark" type="submit">Sign Up</button>
+    </a>
+    <p style="margin-left: 150px;" class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
+</div>
+  </form>
 {% endblock %}
