--- a/movies/templates/login.html
+++ b/movies/templates/login.html
@@ -4,17 +4,20 @@
 
     
     
-    <form>
+    <form method="post">
+  
         <div style="width: 400px; margin-left: 650px; margin-top: 150px;">
          <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
         
     
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-          <label for="floatingInput">Email address</label>
+          <input type="username"  class="form-control" id="floatingInput" placeholder="name@example.com">
+           
+          <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
           <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+           
           <label for="floatingPassword">Password</label>
         </div>
     
@@ -24,6 +27,8 @@
             Remember me
           </label>
         </div>
+
+
         <button class="btn btn-primary w-100 py-2 text-bg-dark" type="submit">Sign in</button>
         <p style="margin-left: 150px;" class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
     </div>
