--- a/movies/templates/movie_detail.html
+++ b/movies/templates/movie_detail.html
@@ -1,18 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
-    <div class="container">
-        <div class="card">
-            <div class="card-header" >{{ movie.name }}  </div>
-            <div class="card-body">
-                <img  src="{{ movie.image.url }}" alt="qwert">
-                <p >{{ movie.description  }}</p>
-            </div>
-            <div class="card-footer">
-                <h3 class="card-footer">{{ movie.realised_date }} | {{ movie.category }}</h3>
-                <h3 class="card-footer"><a href="{{ movie.trailer }}">Movie trailers</a></h3>
-            </div>
-        </div>
-    </div>    
+
+{{movie.category}}
+{{movie.realised_date}}
+{{movie.description}}
+{{movie.image}}
+{{movie.trailer}}
+
+
 {% endblock content %}
