--- a/movies/templates/movie_list.html
+++ b/movies/templates/movie_list.html
@@ -22,7 +22,7 @@
       <p class="col-md-8 fs-4" style="width: 500px; margin-left: 20px;">{{i.description|slice:":500"}}...</p>
     </div >
       <div style="display: flex; margin-top: 20px;">
-        <a href="{detail}"><button class="btn btn-primary btn-lg text-bg-dark" type="button">Подробнее</button></a>
+        <button class="btn btn-primary btn-lg text-bg-dark" type="button">Подробнее</button>
 <p style="margin-left: 400px"> {{i.realised_date}}</p>
         </div>
     </div>
