--- a/movies/templates/movie_detail.html
+++ b/movies/templates/movie_detail.html
@@ -2,20 +2,21 @@
 {% block content %}
 
     
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-        <div class="container-fluid py-5" style="padding: 100px;">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3" >
+        <div class="container-fluid py-5" style="padding: 100px; background-color: rgb(214, 242, 111);">
             <div style="display: flex;">
                 
             <img src="{{movie.image.url}}" alt="{{movie.name}}" style="width: 500px;">
             <h2 style="margin-top: px; width: 590px; margin-left: 50px;">Год выпуска: {{movie.realised_date}}</h2>
-        
-        
-            
 
             </div>
             <h1 style="margin-top: px; width: 500px;">Описание фильма</h1>
         <br>
           <p>{{movie.description}}</p>
+          <form action="{% url 'detail' movie.id %}">
+            {% csr token %}
+            {{ comment_form.as_p }}
+          </form>
         </div >
 
 
