ele islenip atir

--- a/movies/templates/movie_list.html
+++ b/movies/templates/movie_list.html
@@ -6,8 +6,8 @@
 
 {% for i in movies %}
 
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3" style="background-color: black;">
-    <div class="container-fluid py-5" style="padding: 100px; background-color: rgb(227, 201, 51);">
+
+    <div class="container-fluid py-5" style="padding: 100px; ">
         <h1 class="display-5 fw-bold">{{i.name}}</h1>
         <div style="display: flex;">
         </a><img src="{{i.image.url}}" alt="{{i.name}}" style="width: 500px;">
