--- a/movies/templates/movie_detail.html
+++ b/movies/templates/movie_detail.html
@@ -2,8 +2,8 @@
 {% block content %}
 
     
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3" >
-        <div class="container-fluid py-5" style="padding: 100px; background-color: rgb(214, 242, 111);">
+   
+        <div class="container-fluid py-5">
             <div style="display: flex;">
                 
             <img src="{{movie.image.url}}" alt="{{movie.name}}" style="width: 500px;">
@@ -13,9 +13,14 @@
             <h1 style="margin-top: px; width: 500px;">Описание фильма</h1>
         <br>
           <p>{{movie.description}}</p>
+          {% for comment in comments %}
+            {{comment.text}}
+            {{comment.created_at}}
+          {% endfor %}
           <form action="{% url 'detail' movie.id %}">
-            {% csr token %}
+            {% csrf_token %}
             {{ comment_form.as_p }}
+            <input type="submit" value="Добавить коммент" id="">
           </form>
         </div >
 
