--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <script src="https://cdn.tailwindcss.com"></script>
     
 </head>
 
@@ -26,7 +27,7 @@
               <li><a href="category.html" class="nav-link px-2 text-white">Category</a></li>
               <li><a href="#" class="nav-link px-2 text-white">Movies</a></li>
               
-              <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+              <li><a href="{% url 'about' %}" class="nav-link px-2 text-white">About</a></li>
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
