--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -24,7 +24,7 @@
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
-              <li><a href="category.html" class="nav-link px-2 text-white">Category</a></li>
+              <li><a href="{% url 'Category' %}" class="nav-link px-2 text-white">Category</a></li>
               <li><a href="#" class="nav-link px-2 text-white">Movies</a></li>
               
               <li><a href="{% url 'about' %}" class="nav-link px-2 text-white">About</a></li>
@@ -46,6 +46,7 @@
           </div>
         </div>
       </header>
+      
     
 
       {% block content %}
