--- a/movies/templates/category.html
+++ b/movies/templates/category.html
@@ -4,30 +4,12 @@
 
     
     
-    <form>
-        <div style="width: 400px; margin-left: 650px; margin-top: 150px;">
-         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-        
-    
-        <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-          <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-          <label for="floatingPassword">Password</label>
-        </div>
-    
-        <div class="form-check text-start my-3">
-          <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-          <label class="form-check-label" for="flexCheckDefault">
-            Remember me
-          </label>
-        </div>
-        <button class="btn btn-primary w-100 py-2 text-bg-dark" type="submit">Sign in</button>
-        <p style="margin-left: 150px;" class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
-    </div>
-      </form>
+<select class="form-select" aria-label="Default select example">
+  <option selected>Open this select menu</option>
+  <option value="1">One</option>
+  <option value="2">Two</option>
+  <option value="3">Three</option>
+</select>
     
     
         
