--- a/movies/templates/registration.html
+++ b/movies/templates/registration.html
@@ -1,42 +1,32 @@
 {% extends 'base.html' %}
-
-
+{% load static %}
+<link rel="stylesheet" href="{% static 'signup.css' %}">
 {% block content %}
 
 
-<form>
-    <div style="width: 400px; margin-left: 550px; margin-top: 150px;">
-     <h1 class="h3 mb-3 fw-normal">Please sign Up</h1>
-    
-
-    <div class="form-floating ">
-      <input type="username" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Username</label>
+<div class="container-fluid py-5" style="background-color: rgba(253, 224, 3, 0.636); width: 500px;">
+  <main class="form-signin w-100 m-auto">
+    <div class="container">
+    <form action="{% url 'registration' %}" method="post">
+    {% csrf_token %}
+    <div class="element">
+        <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
+        <h1>{{form.username}}</h1>
     </div>
-    <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Email address</label>
-      </div>
-    <div class="form-floating">
-      <input type="password1" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password1</label>
+    <div class="element">
+        <br>
+        <h1>{{form.email}}</h1>
     </div>
-    <div class="form-floating">
-        <input type="password2" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">Password2</label>
-      </div>
-
-
-    <div class="form-check text-start my-3">
-      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-      <label class="form-check-label" for="flexCheckDefault">
-        Remember me
-      </label>
+    <br>
+    <div class="element">
+        <h1>{{form.password1}}</h1>
     </div>
-    <a href="{% url 'login' %}">
-      <button class="btn btn-primary w-100 py-2 text-bg-dark" type="submit">Sign Up</button>
-    </a>
-    <p style="margin-left: 150px;" class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
+    <br>
+    {{form.password2}}
+    <br>
+    <input type="submit" name="" id="">
+    </div>
 </div>
-  </form>
+
+
 {% endblock %}
