--- a/movies/templates/login.html
+++ b/movies/templates/login.html
@@ -2,14 +2,15 @@
 {% extends 'base.html' %}
 {% block content %}
     <form method="post">
+      {% csrf_token %}
         <div style="width: 400px; margin-left: 550px; margin-top: 150px;">
          <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
         <div class="form-floating">
-          <input type="username"  class="form-control" id="floatingInput" placeholder="name@example.com">
+          <input type="username"  class="form-control" id="{{form.username}}
           <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+          <input type="password" class="form-control" id="{{form.password}}"
           <label for="floatingPassword">Password</label>
         </div>
         <div class="form-check text-start my-3">
