--- a/movies/templates/registration.html
+++ b/movies/templates/registration.html
@@ -1,32 +1,38 @@
+
 {% extends 'base.html' %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'signup.css' %}">
 {% block content %}
 
-
-<div class="container-fluid py-5" style="background-color: rgba(253, 224, 3, 0.636); width: 500px;">
-  <main class="form-signin w-100 m-auto">
-    <div class="container">
-    <form action="{% url 'registration' %}" method="post">
-    {% csrf_token %}
-    <div class="element">
-        <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
-        <h1>{{form.username}}</h1>
-    </div>
-    <div class="element">
+<div class="container-fluid py-5" style="width: 520px; background-color: rgba(253, 224, 3, 0.636); margin-top: 100px;">
+    <main class="form-signin w-100 m-auto">
+        <div class="container">
+        <form action="{% url 'registration' %}" method="post">
+        {% csrf_token %}
+        <div class="element">
+            <h1 class="h3 mb-3 fw-normal" style="margin-left: 132px;">Please sign up</h1>
+            <h1>Username</h1>
+            <input type="username"  class="form-control" id="{{form.username}}">
+        </div>
+        <div class="element">
+            <br>
+            <h1>Email</h1>
+            <input type="email"  class="form-control" id="{{form.email}}">
+        </div>
         <br>
-        <h1>{{form.email}}</h1>
-    </div>
-    <br>
-    <div class="element">
-        <h1>{{form.password1}}</h1>
-    </div>
-    <br>
-    {{form.password2}}
-    <br>
-    <input type="submit" name="" id="">
+        <div class="element">
+            <h1>Password 1</h1>
+            <input type="password"  class="form-control" id="{{form.password1}}">
+        </div>
+        <br>
+        <div class="element">
+            <h1>Password 2</h1>
+            <input type="password"  class="form-control" id="{{form.password2}}">
+        </div>
+        <br>
+
+        <button class="btn btn-primary w-100 py-2 text-bg-dark" style="width: 250px;" type="submit">Sign in</button>
     </div>
 </div>
-
 
 {% endblock %}
