--- a/movies/templates/about.html
+++ b/movies/templates/about.html
@@ -3,36 +3,66 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto flex flex-col">
-    <div class="lg:w-4/6 mx-auto">
-      <div class="rounded-lg h-64 overflow-hidden">
-        <img alt="content" class="object-cover object-center h-full w-full" src="#">
-      </div>
-      <div class="flex flex-col sm:flex-row mt-10">
-        <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
-          <div class="w-20 h-20 rounded-full inline-flex items-center justify-center bg-gray-200 text-gray-400">
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
-              <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-              <circle cx="12" cy="7" r="4"></circle>
-            </svg>
-          </div>
-          <div class="flex flex-col items-center text-center justify-center">
-            <h2 class="font-medium title-font mt-4 text-gray-900 text-lg">Phoebe Caulfield</h2>
-            <div class="w-12 h-1 bg-indigo-500 rounded mt-2 mb-4"></div>
-            <p class="text-base">Raclette knausgaard hella meggs normcore williamsburg enamel pin sartorial venmo tbh hot chicken gentrify portland.</p>
-          </div>
-        </div>
-        <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-200 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
-          <p class="leading-relaxed text-lg mb-4">Meggings portland fingerstache lyft, post-ironic fixie man bun banh mi umami everyday carry hexagon locavore direct trade art party. Locavore small batch listicle gastropub farm-to-table lumbersexual salvia messenger bag. Coloring book flannel truffaut craft beer drinking vinegar sartorial, disrupt fashion axe normcore meh butcher. Portland 90's scenester vexillologist forage post-ironic asymmetrical, chartreuse disrupt butcher paleo intelligentsia pabst before they sold out four loko. 3 wolf moon brooklyn.</p>
-          <a class="text-indigo-500 inline-flex items-center">Learn More
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </a>
-        </div>
+<main>
+  
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center" style="background-color: rgba(99, 99, 101, 0.682);">
+    <div class="col-md-6 p-lg-5 mx-auto my-5" style="background-color: rgba(237, 227, 36, 0.516);">
+      <h1 class="display-3 fw-bold">Film site about</h1>
+      <h3 class="fw-normal text-muted mb-3">Build anything you want with Aperture</h3>
+      <div class="d-flex gap-3 justify-content-center lead fw-normal">
+        <a class="icon-link" href="#">
+          Learn more
+          <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+        </a>
+        <a class="icon-link" href="#">
+          Buy
+          <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+        </a>
       </div>
     </div>
+    <div class="product-device shadow-sm d-none d-md-block"></div>
+    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
   </div>
-</section>
+  <div class="p-5 mb-4 rounded-3" style="background-color: rgba(243, 235, 128, 0.475); width: 1200px; margin-left: 150px;">
+    <h2>
+      Comments From Visitors & Reviewers:
+
+      - "I was just reading your analysis/review of Sunset Boulevard on Filmsite.org and it struck me how long I have been enjoying your work and how incredibly comprehensive and voluminous your written output is. It is amazing to me how you can produce such volumes of work with such high quality and thoughtful insights. I know you do it because you love it and you love films, but I still want to thank you for providing this wonderful and most enjoyable resource to filmgoers."
+      
+      - "I teach a high school film literature class, and your site is an indispensable resource for me when I put together my course syllabus each semester."
+      
+      - "An excellent overview of classic Hollywood films."
+      
+      - "I just wanted to express my awe and appreciation by saying what an excellent website you've created for us all. Vastly knowledgeable in the century plus years of the art, craft, and techniques of Cinema history and entertaining at the same time. Keep doing what you're doing because it seems to be working. Thank you."
+      
+      - " I've enjoyed and extensively referred to your site for years....above all else, a shout out to you and all your fantastic work on your site. It's an indispensable trove."
+      
+      - "The Greatest Films is an encyclopedic, enthusiastic history of American film."
+      
+      - "One of the better amateur sites on its topic."
+      
+      - "Excellent for hunting down the perfect rental."
+      
+      - "A virtual treasure trove of cinema goodies."
+      
+      - "A real find for film buffs of all persuasions."
+      
+      - "I really love to read your movie summaries."
+      
+      - "It truly is a wonderfully in-depth and detailed place not only interesting to browse through, but, being a teacher of media/film, academically worthwhile." The links and additional information you provide is also first class. Keep up the good work and keep adding to the site."
+      
+      - "I'm studying American film and this site is one of my main resources!!
+      
+      - "Any site with Roger Ebert's endorsement has got to be bookmarked!"
+      
+      - "Your compilation is extraordinary. Anyone who can coherently relate the plot of 'The Big Sleep' or 'Bringing Up Baby' deserves the highest esteem. I'm a New York screenwriter and actor, and find myself copying sections of dialogue and e-mailing them to my LA colleagues with the question, 'All right, film and director? What year?' Keep up the great work!"
+      
+      - "The site offers many ways of looking at important films, but the centerpiece is his series of 100 long reviews of classics, including downloadable still photos, highly extensive plot summaries, and a lot of quotes... This site is useful for film students or others seeking an entry point into film history. He has essays on genres, periods and types of movies, and suggested titles in each area, and his sheer love for the movies comes across in his accuracy and energy." (Roger Ebert)
+      
+      - " I taught film, as well as film and literature, courses for 40 years, and during the last ten I always referred my students to filmsite.org ahead of any other internet site dealing with movies. Young people, needless to say, have a strong bias on behalf of the contemporary, or the present tense and an equally strong antipathy toward "old" movies, black and white movies (Roger Ebert is quite strong about the superior "art" of shooting in black and white), movies "long" on dialog (however sparkling) and short on production values (hence, "The Maltese Falcon," "His Girl Friday," even most Marx Brothers films do poorly when left to the judgment of impatient teenagers and 20-21-year olds. And of course silent movies practically don't even count (I have even had to defend "Birth of a Nation" to politically correct academics who could not see beyond their own calcified ideologies). And, despite adult assumptions, I've discovered that young people don't know much if anything about Charlie Chaplin (and if they do, they've never seen a Chaplin film--and, more often than not, the same turns out to be true for a Marx Brothers, Astaire or Bogart movie). The point is that your site has always offered a "validation" I could turn to for support. I've even printed out some of the ratings as the basis for "must see" films and extra-credit projects, using it most recently when I taught a course in "cult films.""
+    </h2>
+  </div>
+
+  
+</main>
   {% endblock %}
