--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -9,11 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
-    
+
+
 </head>
 
 <link rel="stylesheet" href="{% static 'img/style.css' %}">
-<body style="background-image: url('{% static 'img/poto.jpg' %}');">
+<body style="background-image: url('{% static 'img/qarafon.jpg' %}')">
+
   
     <header class="p-3 text-bg-dark">
         <div class="container">
@@ -24,10 +26,25 @@
     
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
-              <li><a href="{% url 'Category' %}" class="nav-link px-2 text-white">Category</a></li>
               <li><a href="#" class="nav-link px-2 text-white">Movies</a></li>
               
               <li><a href="{% url 'about' %}" class="nav-link px-2 text-white">About</a></li>
+              <li>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {% if category %}
+                      {{category.name}}
+                    {% else %}
+                      Category
+                    {% endif %}
+                  </button>
+                  <ul class="dropdown-menu">
+                    {% for i in categories %}
+                    <li><a class="dropdown-item" href="{% url 'category' i.slug %}">{{ i.name }}</a></li>
+                    {% endfor %}
+
+                  </ul>
+              </div></li>
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -39,7 +56,7 @@
               User: {{ user.username }}
             </p>
             <a href="{% url 'logout' %}">
-                <button   class="btn btn-outline-light me-2">
+                <button   class="btn btn-outline-light me-2" style="background-color: rgba(240, 13, 13, 0.788);">
                   logout 
                 </button>
               
@@ -79,7 +96,6 @@
         </footer>
       </div>
       
-      
-        
+      <div style="background-color:black(35 31 32);">        
 </body>
 </html>
