--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 
 <link rel="stylesheet" href="{% static 'img/style.css' %}">
-<body style="background-image: url('{% static 'img/qarafon.jpg' %}')">
+<body style="background-color: rgb(32, 30, 67);">
 
   
     <header class="p-3 text-bg-dark">
