--- a/movies/templates/movie_list.html
+++ b/movies/templates/movie_list.html
@@ -2,9 +2,10 @@
 {% block content %}
 {% for i in movies %}
   <div class="p-5 mb-4 rounded-3" >
-    <div class="container-fluid py-5" style="padding: 100px; background-color: rgba(138, 142, 134, 0.352);">
+    <div class="container-fluid py-5" style="padding: 100px; background-color: rgb(19, 75, 112);">
         <h1 class="display-5 fw-bold" style="text-decoration-color: aliceblue;">{{i.name}}</h1>
-        <div style="display: flex; background-color: rgba(251, 251, 251, 0.547);">
+        <div style="display: flex; background-color: 
+rgb(80, 140, 155)">
         </a><img src="{{i.image.url}}" alt="{{i.name}}" style="width: 410px; height: 500px;">
       <p class="col-md-8 fs-4" style="width: 500px; margin-left: 20px;">{{i.description|slice:":500"}}...</p>
     </div >
