--- a/movies/templates/movie_detail.html
+++ b/movies/templates/movie_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %} 
       <div class="p-5 mb-4  rounded-3">
-        <div class="container-fluid py-5" style="background-color: rgba(246, 242, 212, 0.534);">
+        <div class="container-fluid py-5" style="background-color: rgb(238, 238, 238)">
           <h3>Name Film: {{movie.name}}</h3>
             <div style="display: flex;">
               <img src="{{movie.image.url}}" alt="{{movie.name}}" style="width: 400px; height: 500px;">
